--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "@aptos-labs/ts-sdk": "^1.27.1",
     "axios": "^1.7.3",
     "bcrypt": "^5.1.1",
+    "bignumber.js": "^9.1.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
